adjust to xtraplatform changes